Avoid parsing the message multiple times in filters. This is against the published KMime policy.

BUG: 291171
(cherry picked from commit 4a2b04233995562919fa894f0cde59f29364fc39)